tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_43.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := (2 + (+ (1 DIV (- x))));
               x := ((x - (+ (+ z))) MOD (+ 1223));
               z := z;
               q := ((- (2 MOD 1)) > (- z));
               y := 1223;
               r := (x >= y);
               q := r;
               r := ((200 + (x DIV (- y))) <= (- x));
  (* error *)  z := (x MOD z);
               p := (((- 1223) MOD y) > 200)
END Test19.